welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:36: error: Unmatched closing brace '}' ignored here
}
^